name:                exodus
version:             0.2.0.0
synopsis:            Hypo PDF tool in Haskell
description:         Please see README.md
homepage:            https://github.com/itswindtw/exodus#readme
license:             BSD3
license-file:        LICENSE
author:              Meng-Hsin Tung
maintainer:          itswindtw@gmail.com
copyright:           Copyright: (c) 2016 Meng-Hsin Tung
category:            Cli
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     PCD, PCDParser, PageComposer
  other-modules:       CairoFFI
  build-depends:       base >= 4.7 && < 5
                    ,  containers
                    ,  megaparsec
                    ,  cairo
                    ,  pango
                    ,  gtk3
                    ,  mtl
                    ,  bytestring
                    ,  text
                    ,  temporary
                    ,  directory
                    ,  process
                    ,  filepath
                    ,  network-uri
  ghc-options:         -threaded -O
  default-language:    Haskell2010

executable exodus
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                    ,  text
                    ,  exodus
  ghc-options:         -threaded -O
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                    ,  hspec
                    ,  megaparsec
                    ,  text
                    ,  exodus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  other-modules:       PageComposerSpec
                    ,  PCDParserSpec
